--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,91 +1,111 @@
+---
 repos:
+  - repo: meta
+    hooks:
+      # - id: check-hooks-apply  # Leave nbqa in here.
+      - id: check-useless-excludes
+      # - id: identity  # Prints all files passed to pre-commits. Debugging.
+  - repo: https://github.com/lyz-code/yamlfix
+    rev: 1.2.0
+    hooks:
+      - id: yamlfix
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
     hooks:
       - id: check-added-large-files
-        args: ["--maxkb=25"]
+        args:
+          - --maxkb=25
       - id: check-case-conflict
       - id: check-merge-conflict
       - id: check-vcs-permalinks
       - id: check-yaml
+      - id: check-toml
       - id: debug-statements
       - id: end-of-file-fixer
       - id: fix-byte-order-marker
+        types:
+          - text
+      - id: forbid-submodules
       - id: mixed-line-ending
+        args:
+          - --fix=lf
+        description: Forces to replace line ending by the UNIX 'lf' character.
+      - id: name-tests-test
+        args:
+          - --pytest-test-first
       - id: trailing-whitespace
-  - repo: https://github.com/pre-commit/pygrep-hooks
-    rev: v1.9.0
-    hooks:
-      - id: python-check-blanket-noqa
-      - id: python-check-mock-methods
-      - id: python-no-eval
-      - id: python-no-log-warn
-      - id: python-use-type-annotations
-      - id: text-unicode-replacement-char
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.2.2
-    hooks:
-      - id: pyupgrade
-        args: [--py37-plus]
-  - repo: https://github.com/asottile/reorder_python_imports
-    rev: v3.9.0
-    hooks:
-      - id: reorder-python-imports
-  - repo: https://github.com/asottile/setup-cfg-fmt
-    rev: v1.20.0
-    hooks:
-      - id: setup-cfg-fmt
+      - id: check-ast
+      - id: check-docstring-first
   - repo: https://github.com/psf/black
-    rev: 22.10.0
+    rev: 22.12.0
     hooks:
       - id: black
+        language_version: python3.11
+  - repo: https://github.com/asottile/blacken-docs
+    rev: 1.13.0
+    hooks:
+      - id: blacken-docs
   - repo: https://github.com/PyCQA/docformatter
-    rev: v1.5.0
+    rev: v1.5.1
     hooks:
       - id: docformatter
         args:
-          [
-            --in-place,
-            --wrap-summaries,
-            "88",
-            --wrap-descriptions,
-            "88",
-            --blank,
-          ]
-  - repo: https://github.com/PyCQA/flake8
-    rev: 5.0.4
+          - --in-place
+          - --wrap-summaries
+          - '88'
+          - --wrap-descriptions
+          - '88'
+          - --blank
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: v0.0.230
     hooks:
-      - id: flake8
+      - id: ruff
+      #   args:
+      #     - --verbose
+  - repo: https://github.com/kynan/nbstripout
+    rev: 0.6.1
+    hooks:
+      - id: nbstripout
+        args:
+          - --extra-keys
+          - metadata.kernelspec metadata.language_info.version metadata.vscode
+  - repo: https://github.com/nbQA-dev/nbQA
+    rev: 1.6.1
+    hooks:
+      - id: nbqa-black
+      - id: nbqa-ruff
+  - repo: https://github.com/executablebooks/mdformat
+    rev: 0.7.16
+    hooks:
+      - id: mdformat
         additional_dependencies:
-          [
-            flake8-alfred,
-            flake8-bugbear,
-            flake8-builtins,
-            flake8-comprehensions,
-            flake8-docstrings,
-            flake8-eradicate,
-            flake8-print,
-            flake8-pytest-style,
-            flake8-todo,
-            flake8-typing-imports,
-            flake8-unused-arguments,
-            pep8-naming,
-            pydocstyle,
-            Pygments,
-          ]
+          - mdformat-gfm
+          - mdformat-black
+        args:
+          - --wrap
+          - '88'
+        files: (README\.md)
+  - repo: https://github.com/executablebooks/mdformat
+    rev: 0.7.16
+    hooks:
+      - id: mdformat
+        additional_dependencies:
+          - mdformat-myst
+          - mdformat-black
+        args:
+          - --wrap
+          - '88'
+        files: (docs/.)
   - repo: https://github.com/codespell-project/codespell
     rev: v2.2.2
     hooks:
       - id: codespell
-        args: [--skip="**.ipynb"]
-  - repo: https://github.com/guilatrova/tryceratops
-    rev: v1.1.0
+        args:
+          - --skip="**.ipynb"
+  - repo: https://github.com/asottile/setup-cfg-fmt
+    rev: v2.2.0
     hooks:
-      - id: tryceratops
-  - repo: meta
-    hooks:
-      - id: check-hooks-apply
-      - id: check-useless-excludes
-    # -   id: identity  # Prints all files passed to pre-commits. Debugging.
+      - id: setup-cfg-fmt
 
-
+ci:
+  autoupdate_schedule: monthly
