--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]
 write_to = "src/valuing_alternative_work_arrangements/_version.py"
 
 [tool.pytask.ini_options]
-paths = ["./src/valuing_alternative_work_arrangements", "./src/paper"]
+paths = ["./src/valuing_alternative_work_arrangements", "./paper"]
 infer_latex_dependencies = true
 
 [tool.ruff]
